--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
 <!DOCTYPE html>
 <html lang="=en">
+
+
+
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.
+        0>"
+        <title> Keeping organized and consistent!</title>
         <link rel="stylesheet" href="css/main.css">
-        <title>week 11</title>
         </head>
         <body>
             <header>
-                <h1>working with cascade</h1>
+                <h1>Goal setting is effective!</h1>
+               <nav>
+                <h2 class="hidden">main nav</h2>
+                <ul>
+                   <li>icons</li>
+                   <li>stickers</li>
+                   <li>interface icons</li>
+                   <li>animated icons</li>
+                   <li id="more-button">more</li>
+                   </ul>
+                   </nav>
             </header>
             <main>
+               <nav id="to do">
                 <article id="todo">
                 <h2>to do</h2> 
                 <ul class="todo">
                <li>item 1</li>
-               <li>item 2</li>
+                <input type="checkbox"><span>are you done?</span>
+               <li>item 2</li> 
+               <input type="checkbox"><span>are you done?</span>
                <li>item 3</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 4</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 5</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 6</li>
+               <input type="checkbox"><span>are you done?</span>
                 </ul>
                 </article>
                 <article id="inprogress">
                     <h2>in progress</h2>
                     <ul class="progress">
                <li>item 1</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 2</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 3</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 4</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 5</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 6</li>
+               <input type="checkbox"><span>are you done?</span>
             
                     </ul>
                 </article>
@@ -37,15 +65,24 @@
                 <h2>done</h2>
                 <ul class="fin">
                <li>item 1</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 2</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 3</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 4</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 5</li>
+               <input type="checkbox"><span>are you done?</span>
                <li>item 6</li>
+               <input type="checkbox"><span>are you done?</span>
                </ul>
+            </nav>
             </article>
             </main>
-            <footer></footer>
+            <footer class="sticky_footer">
+            <h3> all images &copy; Jasper Fraser</h3>
+            </footer>
             <input type="checkbox">
         </body>
 </html>
