--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                <nav>
                 <h2 class="hidden">main nav</h2>
                 <ul>
-                   <li>icons</li>
-                   <li>stickers</li>
-                   <li>interface icons</li>
-                   <li>animated icons</li>
+                   <li>staying organized</li>
+                   <li>meditating</li>
+                   <li>cleaning up</li>
+                   <li>sorting your work</li>
                    <li id="more-button">more</li>
                    </ul>
                    </nav>
